# Smar-TEST

./: .env.example  .gitignore  ALTERNATIVE_SOLUTIONS.md  BUILD_DESKTOP_APP.md  DEMO_QUICK_REFERENCE.md  DEMO_SCRIPT.md  DESIGN_FIXES.md  DESIGN_GUIDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  INITIALIZATION.md  LICENSE  NGROK_QUICK_START.md  README.md  REBRANDING_SUMMARY.md  SECURITY.md  SECURITY_HOTFIX.md  SETTINGS_PERSISTENCE_GUIDE.md  STREAMLIT_CLOUD_DEPLOYMENT.md  VERIFY_DEPLOYMENT.md  VLLM_INTEGRATION.md  WEB_DESKTOP_SPLIT.md  app.py  build_desktop.py  demo_requirements_ecommerce.txt  docker-compose.yml  requirements-build.txt  requirements-dev.txt  requirements.txt  settings.template.json  setup.cfg
.streamlit/: config.toml
config/: __init__.py  environment.py  llm_config.py  settings.py  settings_manager.py  user_session.py
core/: __init__.py  document_parser.py  export_handler.py  llm_adapter.py  test_generator.py
docs/: PROVIDER_COMPARISON.md  VLLM_QUICK_START.md  VLLM_SETUP.md
models/: __init__.py  client_context.py  requirement.py  test_case.py
storage/: __init__.py  database.py  file_manager.py
templates/: __init__.py  prompts.py
tests/: __init__.py  conftest.py  test_database.py  test_document_parser.py  test_export_handler.py  test_models.py  test_prompts.py  test_settings.py
ui/: __init__.py  components.py  styles.py
