# ============================================
# Test Case Generation Agent - Tool Configuration
# ============================================

[metadata]
name = testcase-generation-agent
version = 1.1.0
description = AI-powered test case generation from requirements documents
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.10

[options]
packages = find:
install_requires =
    streamlit>=1.30.0
    requests>=2.31.0
    huggingface-hub>=0.20.0
    pypdf>=3.17.0
    python-docx>=1.1.0
    openpyxl>=3.1.2
    pandas>=2.0.0
    python-dotenv>=1.0.0
    pydantic>=2.0.0

[options.extras_require]
openai = openai>=1.0.0
anthropic = anthropic>=0.18.0
groq = groq>=0.4.0
local-hf = transformers>=4.36.0; torch>=2.0.0; accelerate>=0.25.0
all-providers = openai>=1.0.0; anthropic>=0.18.0; groq>=0.4.0
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-mock>=3.12.0
    flake8>=6.1.0
    black>=23.12.0
    isort>=5.13.0

# --- pytest ---
[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
python_classes = Test*
addopts =
    -v
    --tb=short
    --strict-markers
    --cov=core
    --cov=models
    --cov=storage
    --cov=templates
    --cov-report=term-missing
    --cov-report=html:htmlcov
markers =
    unit: Unit tests (no external dependencies)
    integration: Integration tests (may need Ollama running)
    slow: Slow tests (LLM calls, large file processing)

# --- flake8 ---
[flake8]
max-line-length = 120
exclude =
    __pycache__,
    .git,
    .venv,
    venv,
    data,
    htmlcov,
    .pytest_cache
ignore =
    E501,
    W503,
    E203

# --- isort ---
[isort]
profile = black
line_length = 120
known_first_party = config,core,models,storage,templates,ui

# --- coverage ---
[coverage:run]
source = core,models,storage,templates
omit =
    */tests/*
    */__pycache__/*
    */ui/*
    app.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if __name__ == .__main__
    raise ImportError
    except ImportError
    pass
show_missing = true
fail_under = 50
